fixed text overlap in home page cards

--- a/css/main.css
+++ b/css/main.css
@@ -114,6 +114,10 @@ footer a {
   width: 1200px;
 }
 
+.h2-text {
+  font-size: 25px ;
+}
+
 .column {
   box-sizing: border-box;
   float: left;
@@ -160,9 +164,10 @@ footer a {
 .column h2 {
   color: rgb(0, 0, 0);
   font-family: "Abel";
-  font-size: 30px;
+  font-size: 25px;
   font-weight: 600;
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .header {
